--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <div class="hero-content">
+        </div>
+    </section>
+
+    <section class="container">
+        <h2></h2>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
