--- a/index.html
+++ b/index.html
@@ -21,14 +21,36 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="hero-content">
-        </div>
-    </section>
+    <main>
+        <section id="hero">
+        </section>
 
-    <section class="container">
-        <h2></h2>
-    </section>
+        <section id="section1">
+            <h2 ></h2>
+        </section>
+
+        <section id="section2">
+            <h2></h2>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
+
+        <section id="section3">
+            <h2></h2>
+            <div></div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
