--- a/index.html
+++ b/index.html
@@ -25,20 +25,13 @@
         <section id="hero">
         </section>
 
-        <section id="section1">
-            <h2 ></h2>
+        <section id="Avantages">
+            <h2></h2>
         </section>
 
-        <section id="section2">
-            <h2></h2>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+        <section id="Produits">
+            <h2>Nos Produits</h2>
+            <div id="produits-card"></div>
         </section>
 
         <section id="section3">
